--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^14.0.1",
+    "@react-native-firebase/app": "^19.2.2",
+    "@react-native-firebase/auth": "^19.2.2",
     "expo": "~50.0.17",
     "expo-status-bar": "~1.11.1",
+    "firebase": "^10.11.1",
     "react": "18.2.0",
     "react-native": "0.73.6"
   },
