Initial version of Urheilusuoritukset

--- a/.env
+++ b/.env
@@ -1,17 +1,8 @@
-FIREBASE_API_KEY="AIzaSyAZkJQw0Gt8T5dtZmHpITUE05ZH20pLcWY"
-FIREBASE_AUTH_DOMAIN="urheilusuoritukset.firebaseapp.com"
-FIREBASE_PROJECT_ID="urheilusuoritukset"
-FIREBASE_STORAGE_BUCKET="urheilusuoritukset.appspot.com"
-FIREBASE_MESSAGING_SENDER_ID="643379960314"
-FIREBASE_APP_ID="1:643379960314:web:9351a4a24ea95921252c43"
 
-/*
-const firebaseConfig = {
-  apiKey: process.env.FIREBASE_API_KEY,
-  authDomain: process.env.FIREBASE_AUTH_DOMAIN,
-  projectId: process.env.FIREBASE_PROJECT_ID,
-  storageBucket: process.env.FIREBASE_STORAGE_BUCKET,
-  messagingSenderId: process.env.FIREBASE_MESSAGING_SENDER_ID,
-  appId: process.env.FIREBASE_APP_ID,
-};
-*/
+API_KEY=AIzaSyAZkJQw0Gt8T5dtZmHpITUE05ZH20pLcWY
+AUTH_DOMAIN=urheilusuoritukset.firebaseapp.com
+PROJECT_ID=urheilusuoritukset
+STORAGE_BUCKET=urheilusuoritukset.appspot.com
+MESSAGING_SENDER_ID=643379960314
+APP_ID=1:643379960314:web:9351a4a24ea95921252c43
+MEASUREMENT_ID=G-3WYDFM9K9Y
