--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "expo-location": "~17.0.1",
     "expo-sensors": "~13.0.6",
     "expo-status-bar": "~1.12.1",
-    "firebase": "^10.11.1",
+    "firebase": "^10.12.0",
     "react": "18.2.0",
     "react-native": "0.74.1",
     "react-native-dotenv": "^3.4.11",
@@ -30,7 +30,10 @@
     "react-native-maps": "1.15.1",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
-    "react-native-screens": "3.31.1"
+    "react-native-screens": "3.31.1",
+    "expo-gl": "~14.0.2",
+    "react-native-view-shot": "3.8.0",
+    "undefined": "firebase/storage"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0"
